--- a/index.html
+++ b/index.html
@@ -16,19 +16,21 @@
   <body>
     <nav>
       <img alt="logo hunddle" src="images/logo.svg" />
-      <a href="#" class="btn">Try It Free</a>
+      <a href="#">Try It Free</a>
     </nav>
     <header>
-      <h1>Build The Community Your Fans Will Love</h1>
-      <p>
-        Huddle re-imagines the way we build communities. You have a voice, but
-        so does your audience. Create connections with your users as you engage
-        in genuine discussion.
-      </p>
-      <a href="#" class="btn">Get Started For Free</a>
-      <figure>
-        <img src="images/screen-mockups.svg" alt="mockups" />
-      </figure>
+      <section>
+        <h1>Build The Community Your Fans Will Love</h1>
+        <p>
+          Huddle re-imagines the way we build communities. You have a voice, but
+          so does your audience. Create connections with your users as you
+          engage in genuine discussion.
+        </p>
+        <a href="#" class="button-primary">Get Started For Free</a>
+        <figure>
+          <img src="images/screen-mockups.svg" alt="mockups" />
+        </figure>
+      </section>
     </header>
   </body>
 </html>
