--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a href="#">Try It Free</a>
     </nav>
     <header>
-      <section>
+      <section class="hero">
         <h1>Build The Community Your Fans Will Love</h1>
         <p>
           Huddle re-imagines the way we build communities. You have a voice, but
@@ -32,5 +32,71 @@
         </figure>
       </section>
     </header>
+
+    <section class="status">
+      <div class="status-left">
+        <img src="/images/icon-communities.svg" />
+        <h2 class="status__header">1.4k+</h2>
+        <p class="status__detail">Communities Formed</p>
+      </div>
+      <div class="status-right">
+        <img src="/images/icon-messages.svg" />
+        <h2 class="status__header">2.7m+</h2>
+        <p class="status__detail">Messages Sent</p>
+      </div>
+    </section>
+
+    <section class="sectionLines">
+      <div class="grow-together-lines-top bg-img"></div>
+      <div class="sectionLines__container">
+        <div class="sectionItem">
+          <div class="sectionItem__detail">
+            <h3>Grow Together</h3>
+            <p>
+              Generate meaningful discussions with your audience and build a
+              strong, loyal community. Think of the insightful conversations you
+              miss out on with a feedback form.
+            </p>
+          </div>
+          <div class="sectionItem__img">
+            <img src="/images/illustration-grow-together.svg" />
+          </div>
+        </div>
+      </div>
+
+      <div class="grow-together-lines-bottom bg-img"></div>
+    </section>
+    <section class="sectionItem flowingConversations">
+      <div class="sectionItem__img">
+        <img src="/images/illustration-flowing-conversation.svg" />
+      </div>
+      <div class="sectionItem__detail">
+        <h3>Flowing Conversations</h3>
+        <p>
+          You wouldn't paginate a conversation in real life, so why do it
+          online? Our threads have just-in-time loading for a more natural flow.
+        </p>
+      </div>
+    </section>
+    <section class="sectionLines">
+      <div class="your-users-lines-top bg-img"></div>
+      <div class="sectionLines__container">
+        <div class="sectionItem">
+          <div class="sectionItem__detail">
+            <h3>Your Users</h3>
+            <p>
+              It takes no time at all to integrate Huddle with your app's
+              authentication solution. This means, once signed in to your app,
+              your users can start chatting immediately.
+            </p>
+          </div>
+          <div class="sectionItem__img">
+            <img src="/images/illustration-your-users.svg" />
+          </div>
+        </div>
+      </div>
+
+      <div class="your-users-lines-bottom bg-img"></div>
+    </section>
   </body>
 </html>
