--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/08ef7343fd.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
@@ -98,5 +102,56 @@
 
       <div class="your-users-lines-bottom bg-img"></div>
     </section>
+    <section class="buildYourCommunity">
+      <h2>Ready To Build Your Community?</h2>
+      <a href="#" class="button-primary">Get Started For Free</a>
+    </section>
+    <div class="footer-line-top bg-img"></div>
+    <footer>
+      <div class="container-footer">
+        <div class="container-footer__section-left">
+          <img
+            class="container-footer__section-left-logo"
+            src="/images/logo-white.svg"
+          />
+          <p class="container-footer__section-left-detail">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
+            nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.
+          </p>
+          <div class="container-footer__section-left-contact">
+            <div>
+              <img src="/images/icon-phone.svg" />
+              <p>Phone: +1-543-123-4567</p>
+            </div>
+            <div>
+              <img src="/images/icon-email.svg" />
+              <p>example@huddle.com</p>
+            </div>
+          </div>
+          <div class="container-footer__section-left-social-media">
+            <button>
+              <i class="fab fa-facebook-square"></i>
+            </button>
+            <button>
+              <i class="fab fa-instagram"></i>
+            </button>
+            <button>
+              <i class="fab fa-twitter-square"></i>
+            </button>
+          </div>
+        </div>
+        <div class="container-footer__section-right">
+          <p class="container-footer__section-right-title">NEWSLETTER</p>
+          <p class="container-footer__section-right-detail">
+            To recieve tips on how to grow your community, sign up to our weekly
+            newsletter. We’ll never send you spam or pass on your email address
+          </p>
+          <div class="container-footer__section-right-mail">
+            <input type="email" pattern=".+@globex\.com" size="25" required />
+            <a href="#" class="button-secondary">Subscribe</a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
