--- a/index.html
+++ b/index.html
@@ -146,10 +146,17 @@
             To recieve tips on how to grow your community, sign up to our weekly
             newsletter. We’ll never send you spam or pass on your email address
           </p>
-          <div class="container-footer__section-right-mail">
-            <input type="email" pattern=".+@globex\.com" size="25" required />
-            <a href="#" class="button-secondary">Subscribe</a>
-          </div>
+
+          <form class="container-footer__section-right-mail">
+            <input
+              type="email"
+              placeholder="Enter your email"
+              pattern=".+@globex\.com"
+              size="25"
+              required
+            />
+            <input type="submit" class="button-secondary" value="Subscribe" />
+          </form>
         </div>
       </div>
     </footer>
