--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </p>
         <a href="#" class="button-primary">Get Started For Free</a>
         <figure>
-          <img src="images/screen-mockups.svg" alt="mockups" />
+          <img src="images/screen-mockups.svg" class="hero-img" alt="mockups" />
         </figure>
       </section>
     </header>
