--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Hunddle Curves | Frontend Mentor</title>
+    <meta
+      property="og:title"
+      content="Huddle landing page with curved sections challenge hub | Rabi León"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://rabileon.github.io/huddle-landing-page-with-curved-sections/"
+    />
+    <meta property="og:image" content="./images/screen.png" />
+    <meta property="og:description" content="Reto de HTML Landing Page" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
