--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       property="og:url"
       content="https://rabileon.github.io/huddle-landing-page-with-curved-sections/"
     />
-    <meta property="og:image" content="./images/screen.png" />
+    <meta property="og:image" content="images/screen.png" />
     <meta property="og:description" content="Reto de HTML Landing Page" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
