--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 
     <section class="status">
       <div class="status-left">
-        <img src="/images/icon-communities.svg" />
+        <img src="images/icon-communities.svg" />
         <h2 class="status__header">1.4k+</h2>
         <p class="status__detail">Communities Formed</p>
       </div>
       <div class="status-right">
-        <img src="/images/icon-messages.svg" />
+        <img src="images/icon-messages.svg" />
         <h2 class="status__header">2.7m+</h2>
         <p class="status__detail">Messages Sent</p>
       </div>
@@ -75,7 +75,7 @@
             </p>
           </div>
           <div class="sectionItem__img">
-            <img src="/images/illustration-grow-together.svg" />
+            <img src="images/illustration-grow-together.svg" />
           </div>
         </div>
       </div>
@@ -84,7 +84,7 @@
     </section>
     <section class="sectionItem flowingConversations">
       <div class="sectionItem__img">
-        <img src="/images/illustration-flowing-conversation.svg" />
+        <img src="images/illustration-flowing-conversation.svg" />
       </div>
       <div class="sectionItem__detail">
         <h3>Flowing Conversations</h3>
@@ -107,7 +107,7 @@
             </p>
           </div>
           <div class="sectionItem__img">
-            <img src="/images/illustration-your-users.svg" />
+            <img src="images/illustration-your-users.svg" />
           </div>
         </div>
       </div>
@@ -124,7 +124,7 @@
         <div class="container-footer__section-left">
           <img
             class="container-footer__section-left-logo"
-            src="/images/logo-white.svg"
+            src="images/logo-white.svg"
           />
           <p class="container-footer__section-left-detail">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
@@ -132,11 +132,11 @@
           </p>
           <div class="container-footer__section-left-contact">
             <div>
-              <img src="/images/icon-phone.svg" />
+              <img src="images/icon-phone.svg" />
               <p>Phone: +1-543-123-4567</p>
             </div>
             <div>
-              <img src="/images/icon-email.svg" />
+              <img src="images/icon-email.svg" />
               <p>example@huddle.com</p>
             </div>
           </div>
