--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Hunddle Curves | Frontend Mentor</title>
+
     <meta
       property="og:title"
       content="Huddle landing page with curved sections challenge hub | Rabi León"
@@ -15,8 +16,9 @@
       property="og:url"
       content="https://rabileon.github.io/huddle-landing-page-with-curved-sections/"
     />
-    <meta property="og:image" content="https://i.imgur.com/dU5fNRU.png" />
+    <meta property="og:image" content="images/screen.png" />
     <meta property="og:description" content="Reto de HTML Landing Page" />
+    <link rel="icon" type="image/png" href="images/favicon-32x32.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
