--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <nav>
+    <nav role="navigation">
       <img alt="logo hunddle" src="images/logo.svg" />
       <a href="#">Try It Free</a>
     </nav>
-    <header>
+    <main role="main">
       <section class="hero">
         <h1>Build The Community Your Fans Will Love</h1>
         <p>
@@ -46,25 +46,29 @@
         </p>
         <a href="#" class="button-primary">Get Started For Free</a>
         <figure>
-          <img src="images/screen-mockups.svg" class="hero-img" alt="mockups" />
+          <img
+            src="images/screen-mockups.svg"
+            class="hero-img"
+            alt="illustration mockups"
+          />
         </figure>
       </section>
-    </header>
+    </main>
 
-    <section class="status">
+    <section class="status" role="status communities">
       <div class="status-left">
-        <img src="images/icon-communities.svg" />
+        <img src="images/icon-communities.svg" alt="illustration communities" />
         <h2 class="status__header">1.4k+</h2>
         <p class="status__detail">Communities Formed</p>
       </div>
       <div class="status-right">
-        <img src="images/icon-messages.svg" />
+        <img src="images/icon-messages.svg" alt="illustration messages" />
         <h2 class="status__header">2.7m+</h2>
         <p class="status__detail">Messages Sent</p>
       </div>
     </section>
 
-    <section class="sectionLines">
+    <section class="sectionLines" role="Grow together">
       <div class="grow-together-lines-top bg-img"></div>
       <div class="sectionLines__container">
         <div class="sectionItem">
@@ -77,16 +81,25 @@
             </p>
           </div>
           <div class="sectionItem__img">
-            <img src="images/illustration-grow-together.svg" />
+            <img
+              src="images/illustration-grow-together.svg"
+              alt="illustration grow together"
+            />
           </div>
         </div>
       </div>
 
       <div class="grow-together-lines-bottom bg-img"></div>
     </section>
-    <section class="sectionItem flowingConversations">
+    <section
+      class="sectionItem flowingConversations"
+      role="Flowing Conversations"
+    >
       <div class="sectionItem__img">
-        <img src="images/illustration-flowing-conversation.svg" />
+        <img
+          src="images/illustration-flowing-conversation.svg"
+          alt="illustration flowing conversation"
+        />
       </div>
       <div class="sectionItem__detail">
         <h3>Flowing Conversations</h3>
@@ -96,7 +109,7 @@
         </p>
       </div>
     </section>
-    <section class="sectionLines">
+    <section class="sectionLines" role="Your users">
       <div class="your-users-lines-top bg-img"></div>
       <div class="sectionLines__container">
         <div class="sectionItem">
@@ -109,24 +122,28 @@
             </p>
           </div>
           <div class="sectionItem__img">
-            <img src="images/illustration-your-users.svg" />
+            <img
+              src="images/illustration-your-users.svg"
+              alt="illustration your users"
+            />
           </div>
         </div>
       </div>
 
       <div class="your-users-lines-bottom bg-img"></div>
     </section>
-    <section class="buildYourCommunity">
+    <section class="buildYourCommunity" role="Ready To Build Your Community">
       <h2>Ready To Build Your Community?</h2>
       <a href="#" class="button-primary">Get Started For Free</a>
     </section>
     <div class="footer-line-top bg-img"></div>
-    <footer>
+    <footer  role="footer>
       <div class="container-footer">
         <div class="container-footer__section-left">
           <img
             class="container-footer__section-left-logo"
             src="images/logo-white.svg"
+            alt="logo hunddle in white"
           />
           <p class="container-footer__section-left-detail">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
@@ -134,11 +151,11 @@
           </p>
           <div class="container-footer__section-left-contact">
             <div>
-              <img src="images/icon-phone.svg" />
+              <img src="images/icon-phone.svg" alt="icon phone" />
               <p>Phone: +1-543-123-4567</p>
             </div>
             <div>
-              <img src="images/icon-email.svg" />
+              <img src="images/icon-email.svg" alt="icon email" />
               <p>example@huddle.com</p>
             </div>
           </div>
