--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <img alt="logo hunddle" src="images/logo.svg" />
       <a href="#">Try It Free</a>
     </nav>
-    <main role="main">
+    <header role="main">
       <section class="hero">
         <h1>Build The Community Your Fans Will Love</h1>
         <p>
@@ -53,7 +53,7 @@
           />
         </figure>
       </section>
-    </main>
+    </header>
 
     <section class="status" role="status communities">
       <div class="status-left">
@@ -137,7 +137,7 @@
       <a href="#" class="button-primary">Get Started For Free</a>
     </section>
     <div class="footer-line-top bg-img"></div>
-    <footer  role="footer>
+    <footer role="footer">
       <div class="container-footer">
         <div class="container-footer__section-left">
           <img
