--- a/index.html
+++ b/index.html
@@ -162,15 +162,21 @@
             </div>
           </div>
           <div class="container-footer__section-left-social-media">
-            <button>
-              <i class="fab fa-facebook-square"></i>
-            </button>
-            <button>
-              <i class="fab fa-instagram"></i>
-            </button>
-            <button>
-              <i class="fab fa-twitter-square"></i>
-            </button>
+            <a href="#" class="social-links-item">
+              <span>
+                <i class="fa fa-facebook-square" aria-hidden="true"></i>
+              </span>
+            </a>
+            <a href="#" class="social-links-item">
+              <span>
+                <i class="fab fa-instagram" aria-hidden="true"></i>
+              </span>
+            </a>
+            <a href="#" class="social-links-item">
+              <span>
+                <i class="fab fa-twitter-square" aria-hidden="true"></i>
+              </span>
+            </a>
           </div>
         </div>
         <div class="container-footer__section-right">
