--- a/index.html
+++ b/index.html
@@ -162,17 +162,21 @@
             </div>
           </div>
           <div class="container-footer__section-left-social-media">
-            <a href="#" class="social-links-item">
+            <a href="#" class="social-links-item" aria-label="link of facebook">
               <span>
                 <i class="fa fa-facebook-square" aria-hidden="true"></i>
               </span>
             </a>
-            <a href="#" class="social-links-item">
+            <a
+              href="#"
+              class="social-links-item"
+              aria-label="link of instagram"
+            >
               <span>
                 <i class="fab fa-instagram" aria-hidden="true"></i>
               </span>
             </a>
-            <a href="#" class="social-links-item">
+            <a href="#" class="social-links-item" aria-label="link of twitter">
               <span>
                 <i class="fab fa-twitter-square" aria-hidden="true"></i>
               </span>
